--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -3,8 +3,8 @@
         &copy; <%- new Date().getFullYear(); %> Leonel Rodriguez WEB
     </div>
     <!-- SCRIPT BOOTSTRAP -->
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
