--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,5 +1,5 @@
     </div>
-    <div class="fixed-bottomm p-3 bg-dark text-center text-light">
+    <div class="fixed-bottomm p-3 mt-3 bg-dark text-center text-light">
         &copy; <%- new Date().getFullYear(); %> Leonel Rodriguez WEB
     </div>
     <!-- SCRIPT BOOTSTRAP -->
